test/fails/unreachable.imp
fun main()
vars n
{   
    if true
    {
        if true
        { return n; }
        { return n; }
    }
    {
        if true
        { return n; }
        { return n; }
    }

    
    n += 1;
    return n;
}

fun noreturn()
{
}

fun noreturn2()
vars n
{
    if true
    {
        n += 1
    }
}

fun lastreturnone()
{
    1
}

fun lastreturn()
{
    return 0;
}

fun retnotlast(b)
{
    return b;
    b = b;

}

fun conditions(b)
{
    if true
    {
        b += 1;
    }

    if false
    {
        b += 1;
    }

    if true
    {
        b += 1;
    }
    {
        b += 1;
    }

    if false
    {
        b += 1;
    }
    {
        b += 1;
    }

    return b;
}

fun retwithinblock(b)
{
    if b
    {
        return b;
        b += 1;
    }
    
}


